New folder/open-interpreter/codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__async_question_answered_on_another_client.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
assertion_line: 937
expression: "render_bottom_popup(&chat, 80)"
---
• Queued follow-up inputs

  Same title?

  My draft for the second question

  enter submit   ctrl+] skip   ⌥+↓ main prompt
