New folder/open-interpreter/codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__oversized_question.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
• Queued follow-up inputs

  What next?

  Type your answer

  enter submit   ctrl+] skip   ⌥+↓ main prompt
