New folder/open-interpreter/codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__queued_async_question_reply.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
assertion_line: 51
expression: "render_bottom_popup(&chat, 80)"
---
• Queued follow-up inputs
  ↳ > Which way?

    !literal answer

  Any details?

  Type your answer

  enter submit   ctrl+] skip   ⌥+↓ main prompt   ⌥+↑ queued messages
