New folder/open-interpreter/codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__single_question_working_spacing.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
expression: rendered
---
• Working (0s • esc to interrupt)

• Queued follow-up inputs

  Only question?

  A typed answer

  enter submit   ctrl+] skip   ⌥+↓ main prompt
